tests/suite/projects/fail/generated/missing_import_1/main.ny
//~ ERROR import not found
import "lib/missing1.ny"

fn main() {
    print(0)
}
